# bezier

./: .appveyor.yml  CMakeLists.txt  DEVELOPMENT.rst  DEVELOPMENT.rst.template  clipping_in_action.py  foo.py  noxfile.py  setup.py  setup_helpers.py  wat.py
.circleci/: config.yml  expected_journal.txt
appveyor/: expected_journal.txt
docs/abi/: curve.rst  status.rst
scripts/macos/: travis_journal.txt
src/bezier/: _clipping.py  collinear_normal.py
src/fortran/: CMakeLists.txt
src/fortran/quadpack/: CMakeLists.txt
src/python/bezier/: __config__.py  __init__.py  _speedup.c  curve.f90  curve_intersection.f90  helpers.f90  include  quadpack  status.f90  surface.f90  surface_intersection.f90  types.f90
tests/fortran/: Makefile
